; ModuleID = '/home/carl/AnghaBench/RetroArch/memory/wii/extr_mem2_manager.c_gx_init_mem2.c'
source_filename = "/home/carl/AnghaBench/RetroArch/memory/wii/extr_mem2_manager.c_gx_init_mem2.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@gx_mem2_heap = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @gx_init_mem2() #0 {
  %1 = alloca i8*, align 8
  %2 = alloca i64, align 8
  %3 = alloca i64, align 8
  %4 = load i64, i64* %2, align 8
  %5 = call i32 @_CPU_ISR_Disable(i64 %4)
  %6 = call i64 (...) @SYS_GetArena2Size()
  %7 = sub nsw i64 %6, 262144
  store i64 %7, i64* %3, align 8
  %8 = call i64 (...) @SYS_GetArena2Hi()
  %9 = load i64, i64* %3, align 8
  %10 = sub nsw i64 %8, %9
  %11 = call i64 @ROUNDUP32(i64 %10)
  %12 = inttoptr i64 %11 to i8*
  store i8* %12, i8** %1, align 8
  %13 = load i8*, i8** %1, align 8
  %14 = call i32 @SYS_SetArena2Hi(i8* %13)
  %15 = load i8*, i8** %1, align 8
  %16 = load i64, i64* %3, align 8
  %17 = call i32 @__lwp_heap_init(i32* @gx_mem2_heap, i8* %15, i64 %16, i32 32)
  %18 = load i64, i64* %2, align 8
  %19 = call i32 @_CPU_ISR_Restore(i64 %18)
  ret i32 1
}

declare dso_local i32 @_CPU_ISR_Disable(i64) #1

declare dso_local i64 @SYS_GetArena2Size(...) #1

declare dso_local i64 @ROUNDUP32(i64) #1

declare dso_local i64 @SYS_GetArena2Hi(...) #1

declare dso_local i32 @SYS_SetArena2Hi(i8*) #1

declare dso_local i32 @__lwp_heap_init(i32*, i8*, i64, i32) #1

declare dso_local i32 @_CPU_ISR_Restore(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
